# module-importer

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/module_importer/: __init__.py  loader.py
tests/: test_moduleloader.py
tests/modules/: __init__.py  module.py
